# LIFE-KEY

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScaleLockLookAndFeel.h
packaging/: make_installer.sh
